# atomspace-metta

./: CMakeLists.txt  README.md
examples/: metta-lisp.scm
opencog/: CMakeLists.txt
opencog/atoms/: CMakeLists.txt  metta.scm
opencog/atoms/metta/: CMakeLists.txt  LispAST.h  MettaAST.cc  MettaAST.h
opencog/atoms/metta-types/: CMakeLists.txt  MeTTaTypes.cc
opencog/atoms/types/: CMakeLists.txt  MeTTaTypes.cc  atom_types.script
opencog/persist/: CMakeLists.txt
opencog/persist/metta/: CMakeLists.txt  EncodeMeTTa.cc
tests/: CMakeLists.txt
tests/atoms/: CMakeLists.txt
tests/atoms/metta/: CMakeLists.txt  metta-basic-test.scm
